miowsis/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: miowsis-production
---
apiVersion: v1
kind: Namespace
metadata:
  name: miowsis-staging
